fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,3 @@
   max-width: 370px;
   overflow: hidden;
 }
-
-p {
-  max-height: 300px;
-}
